# CmakeTemplate

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
header/: class1.h
source/: class1.cpp
tests/: mytests.cpp
